--- a/bdi/WebContent/user/join.html
+++ b/bdi/WebContent/user/join.html
@@ -37,12 +37,12 @@
 				</td>
 			</tr>
 			<tr>
-				<td colspan="2" style="text-align:center"><button type="button" onclick="alert(1)">회원가입</button></td>
+				<td colspan="2" style="text-align:center"><button type="button" onclick="checkValue()">회원가입</button></td>
 			</tr>
 		</table>
 	</form>
 <script>
-
+/* 
 function test(a){
 	alert("난 테스트 함수1");
 }
@@ -51,7 +51,48 @@ function test(){
 }
 test();
 test = 1;
-test();
+test(); */
+	function checkValue(){
+		var nameObj = document.getElementById("name");
+		if(nameObj.value.trim().length<2){
+			alert("이름은 2글자 이상입니다.")
+			nameObj.value = "";
+			nameObj.focus();
+			return false;
+		}
+		
+		var birthObj = document.getElementById("birth");
+		if(birthObj.value.trim().length<6 || birthObj.value.trim().length>=7){
+			alert("생년월일은6글자 ex)010203 으로 적어주세요.")
+			birthObj.value = "";
+			birthObj.focus();
+			return false;
+		}
+		
+		var emailObj = document.getElementById("email");
+		if(emailObj.value.trim().length<5){
+			alert("email은 5글자 이상입니다.")
+			emailObj.value = "";
+			emailObj.focus();
+			return false;
+		}
+		
+		var idObj = document.getElementById("id");
+		if(idObj.value.trim().length<2){
+			alert("id은 2글자 이상입니다.")
+			idObj.value = "";
+			idObj.focus();
+			return false;
+		}
+		
+		var pwdObj = document.getElementById("pwd");
+		if(pwdObj.value.trim().length<8){
+			alert("password는 8글자 이상입니다.")
+			pwdObj.value = "";
+			pwdObj.focus();
+			return false;
+		}
+}
 </script>
 </body>
 </html>
