--- a/bdi/WebContent/user/login.html
+++ b/bdi/WebContent/user/login.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form onsubmit="return checkValue(this)">	<!-- 여기서 this 는 form 태그 전체를 의미 온서브밋은 폼형태(서버제출용)을 제출한다는거 -->
+	<form onsubmit="return checkValue(this)" action="/user/login.jsp">	<!-- 여기서 this 는 form 태그 전체를 의미 온서브밋은 폼형태(서버제출용)을 제출한다는거 -->
 		<table border="1">
 			<tr>
 				<th>아이디</th>
